# ceres-solver

./: .bazelrc  .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  BUILD  CITATION.cff  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  README.rst  WORKSPACE  groups  libceres.pc.in  package.xml  project.config
cmake/CheckCXXCompilerFlagForLibrary/: CMakeLists.txt  CheckCXXCompilerFlagForLibrary.cpp
docs/: CMakeLists.txt  Makefile  api.tex  build.tex  bundleadjustment.tex  ceres-solver.tex  ceres.bib  ceres.tex  changes.tex  curvefitting.tex  faq.tex  further.tex  helloworld.tex  introduction.tex  license.tex  make.bat  modeling.tex  nnlsq.tex  powell.tex  reference-overview.tex  requirements.txt  solving.tex  theory.tex  tutorial.tex
docs/doxygen/: CMakeLists.txt  doxyfile.in
docs/html/: acknowledgements.html  bibliography.html  building.html  contributing.html  genindex.html  index.html  introduction.html  license.html  modeling.html  objects.inv  reading.html  search.html  searchindex.js  solving.html  tutorial.html  version_history.html
docs/html/_sources/: contributing.txt  index.txt  solving.txt  version_history.txt
docs/source/: CMakeLists.txt  about.rst  analytical_derivatives.rst  automatic_derivatives.rst  bibliography.rst  building.rst  citation.rst  conf.py  conf.py.in  contributing.rst  derivatives.rst  faqs.rst  features.rst  gradient_solver.rst  gradient_tutorial.rst  guide.rst  index.rst  installation.rst  interfacing_with_autodiff.rst  introduction.rst  inverse_and_implicit_function_theorems.rst  license.rst  modeling.rst  modeling_faqs.rst  nnls_covariance.rst  nnls_modeling.rst  nnls_solving.rst  nnls_tutorial.rst  numerical_derivatives.rst  solving.rst  solving_faqs.rst  spivak_notation.rst  tricks.rst  tutorial.rst  users.rst  version_history.rst
docs/userguide/: CMakeLists.txt  build.tex  changes.tex  solving.tex
examples/: BUILD  BundlerProblem.h  CMakeLists.txt  Makefile.example  autodiff_codegen.cc  autodiff_codegen_functor.h  autodiff_timing.cc  bal_problem.cc  bal_problem.h  bicubic_interpolation.cc  bicubic_interpolation_analytic.cc  brown_ffcc_reprojection_error.h  brown_ffcckkk_reprojection_error.h  bundle_adjuster.cc  bundleadjuster.cc  circle_fit.cc  curve_fitting.c  curve_fitting.cc  data_fitting.cc  denoising.cc  dynamic_autodiff_cost_function.cc  ellipse_approximation.cc  evaluation_callback_example.cc  fields_of_experts.cc  fields_of_experts.h  first_order_problem_example.cc  flags.cc  flags.h  gaussian_ml.cc  hello_tiny_solver_with_cost_function.cc  helloworld.cc  helloworld_analytic_diff.cc  helloworld_codegen.cc  helloworld_cost_function.h  helloworld_gradient.cc  helloworld_numeric_diff.cc  iteration_callback_example.cc  libmv_bundle_adjuster.cc  libmv_homography.cc  math_utils.h  (+22 more)
examples/sampled_function/: CMakeLists.txt  README.md  sampled_function.cc
examples/slam/: CMakeLists.txt
examples/slam/common/: read_g2o.h
examples/slam/pose_graph_2d/: CMakeLists.txt  README.md  angle_local_parameterization.h  angle_local_parameterization_test.cc  angle_manifold.h  normalize_angle.h  normalize_angle_test.cc  plot_results.py  pose_graph_2d.cc  pose_graph_2d_error_term.cc  pose_graph_2d_error_term.h  pose_graph_2d_error_term_test.cc  read_g2o.cc  read_g2o.h  types.h
examples/slam/pose_graph_3d/: CMakeLists.txt  README.md  eigen_quaternion_parameterization.cc  eigen_quaternion_parameterization.h  plot_results.py  pose_graph_3d.cc  pose_graph_3d_error_term.h  read_g2o.cc  read_g2o.h  types.h
internal/ceres/: CMakeLists.txt  accelerate_sparse.cc  accelerate_sparse.h  adaptive_numeric_diff_test.cc  algorithm_test.cc  apple_accelerate.cc  apple_accelerate.h  array_selector_test.cc  array_utils.cc  array_utils.h  array_utils_test.cc  augmented_lagrangian_cost_function.h  autodiff_codegen_benchmark.cc  autodiff_codegen_benchmark_gen.cc  autodiff_codegen_functor.h  autodiff_codegen_test.cc  autodiff_cost_function_benchmark.cc  autodiff_cost_function_test.cc  autodiff_first_order_function_test.cc  autodiff_local_parameterization_test.cc  autodiff_manifold_test.cc  autodiff_test.cc  blas.cc  blas.h  blas_test.cc  block_diagonal_preconditioner.cc  block_diagonal_preconditioner.h  block_evaluate_preparer.cc  block_evaluate_preparer.h  block_jacobi_preconditioner.cc  block_jacobi_preconditioner.h  block_jacobi_preconditioner_benchmark.cc  block_jacobi_preconditioner_test.cc  block_jacobian_writer.cc  block_jacobian_writer.h  block_random_access_crs_matrix.cc  block_random_access_crs_matrix.h  block_random_access_dense_matrix.cc  block_random_access_dense_matrix.h  block_random_access_dense_matrix_test.cc  (+525 more)
internal/ceres/autodiff_benchmarks/: CMakeLists.txt  autodiff_ba_benchmark.cc  autodiff_benchmarks.cc  autodiff_trivial_benchmark.cc  brdf_benchmark.cc  brdf_cost_function.h  constant_cost_function.h  constant_cost_functions.h  linear_benchmark.cc  linear_benchmark.cc.autosave  linear_cost_functions.h  photometric_error.h  relative_pose_error.h  snavely_reprojection_error.h  snavely_reprojection_error_benchmark.cc  trivial_cost_functions.h
internal/ceres/benchmarks/: macbook-pro-2014-small_blas_gemm_benchmark.json  macbook-pro-2014-small_blas_gemv_benchmark.json
internal/ceres/codegen/: CMakeLists.txt  autodiff_codegen_test.cc  autodiff_codegen_test.h  code_generator.cc  code_generator_test.cc  codegen_ba_benchmark.cc  codegen_code_generator_test.cc  codegen_expression_graph_test.cc  codegen_expression_test.cc  codegen_test_util.h  eliminate_nops.cc  eliminate_nops_test.cc  expression.cc  expression_dependencies.cc  expression_dependencies_test.cc  expression_graph.cc  expression_graph_test.cc  expression_ref.cc  expression_ref_test.cc  expression_test.cc  optimization_pass.cc  optimization_pass_nop_cleanup.cc  optimization_pass_nop_cleanup_test.cc  optimize_expression_graph.cc  optimizer.cc  optimizer_test.cc  snavely_reprojection_error.h  test_utils.cc  test_utils.h
internal/ceres/generated_bundle_adjustment_tests/: CMakeLists.txt  ba_denseschur_auto_test.cc  ba_denseschur_auto_threads_test.cc  (+181 more)
(+240 files in other folders)
